--- a/src/main/resources/META-INF/eleccore_at.cfg
+++ b/src/main/resources/META-INF/eleccore_at.cfg
@@ -36,7 +36,7 @@ public net.minecraft.tileentity.MobSpawnerBaseLogic *
 
 public net.minecraft.item.crafting.ShapedRecipes *()
 
-public net.minecraft.client.renderer.VertexBuffer *
+##public net.minecraft.client.renderer.VertexBuffer *
 
 public net.minecraft.world.gen.feature.WorldGenMinable *
 
@@ -45,3 +45,5 @@ public net.minecraft.item.ItemStack *
 ##public net.minecraft.item.ItemStack field_190928_g ##means: isStackValid, has no MCP name
 
 public-f net.minecraft.item.Item *()
+
+public-f net.minecraft.block.Block func_180632_j(Lnet/minecraft/block/state/IBlockState;)V ##setDefaultState
